fix header width, dropdown alignment, bottom aligned UI

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,13 @@
 app-progress-bar { position: fixed; top: 0; z-index: 1000;}
-app-header-bar { position: fixed; top:0; left:0; right:0; width:100%; z-index:999;}
+app-header-bar { 
+  position: fixed; 
+  top:0; 
+  left:0; 
+  right:0; 
+  width:100vw; 
+  z-index:999;
+  max-width: 100%;
+}
 
 app-footer {
   display:block;
